Produced figure 2 with regional zooms

--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -35,7 +35,8 @@ packages <- c(
   "tools", #Spatial analysis 
   "zeallot", # for Juanito's map
   "gmt", # for estimating distances between points
-  "viridis"
+  "viridis",
+  "cowplot"
 )
 
 my_lib(packages)
@@ -1240,10 +1241,10 @@ Taxon_List_emer <- gsub("_.*","",Taxon_List_emer)
 # Neighbour list and their respective id (see chunk 3)
 Neighbours <- my_path("D", extra_path = "Spatial/", name="Neighbours_eez_id.csv", read = TRUE)
 
-Paths <- paste(my_path("R",extra_path = "Emergence_2005"),Taxon_List,"_emergence.txt",sep="")
+# Paths <- paste(my_path("R",extra_path = "Emergence_2005"),Taxon_List_emer,"_emergence.txt",sep="")
 
 # Clean names to match data
-matching_names <- my_path("G","Spatial/SAU", "sau_matching_names.csv", read = T)
+Matching_names <- my_path("G","Spatial/SAU", "matching_names.csv", read = T)
 
 # --------------- #
 # Load Proportion results
@@ -1251,7 +1252,7 @@ matching_names <- my_path("G","Spatial/SAU", "sau_matching_names.csv", read = T)
 
 
 # Read proportion results
-# prop_results <- PropChange(Taxon_List, links="y") %>% 
+# prop_results <- PropChange(Taxon_List_emer, links="y") %>% 
   # filter(!is.na(eez_neighbour)) %>% 
   # mutate(per_mid_plot =ifelse(per_mid >= 50, 50,
   #                          ifelse(per_mid <= -50,-50,per_mid)
@@ -1266,7 +1267,7 @@ matching_names <- my_path("G","Spatial/SAU", "sau_matching_names.csv", read = T)
           # "proportion_change_2005.csv")
 
 
-prop_results <- my_path("R",name="proportion_change_2005.csv", read=T)
+Prop_results <- my_path("R",name="proportion_change_2005.csv", read=T)
 
 # --------------- #
 # Load year of emergence results
@@ -1281,14 +1282,13 @@ Eme_Res <- bind_rows(lapply(Paths, fread)) %>%
             by = c("eez_name","eez_neighbour")
   ) %>% 
   rename(sf_eez_name=eez_name) %>% 
-  left_join(matching_names,
+  left_join(Matching_names,
             by=  "sf_eez_name") %>% 
   clean_names()
+
 # warnings() for empty data species
 
 # View(Eme_Res)
-
-
 
 # --------------- #
 # Load shapefiles for figures
@@ -1304,23 +1304,45 @@ fnam_world <- "SAUEEZ_July2015.shp"
 
 # Load it!
 World_eez_sf <- st_read(dsn = path_world,
-                    layer =file_path_sans_ext(fnam_world)) %>% 
+                        layer =file_path_sans_ext(fnam_world)) %>% 
   rename(eez_name = Name) %>% 
-  # st_transform(crs = 4326) %>% # 4326
-  st_transform(crs = "+proj=eck4") %>% # for tbular plot
+  st_transform(crs = 4326) %>% # 4326
+  # st_transform(crs = "+proj=eck4") %>% # for tbular plot
   st_simplify(preserveTopology = TRUE, dTolerance = 0.1) %>% 
   clean_names()
 
 # Call world map from natural earth
-World_map <- rnaturalearth::ne_countries(scale = 'small', returnclass = c("sf")) %>% 
-  rename(fishing_entity = name_long) %>%
-  left_join(matching_names,
-            by = "fishing_entity") %>% 
-  distinct(fishing_entity,.keep_all = TRUE) %>% 
-  st_transform(crs = "+proj=eck4") %>% # for tbular plot
 
-# eez_centroid <- read_csv(paste(data_path,"Spatial/eez_centroids.csv", sep = ""))
+World_map_dat <- Matching_names %>% 
+  group_by(sau_fishing_entity,fishing_entity_id,iso_a3) %>% 
+  summarise(n=n()) %>% 
+  select(-n) 
 
+World_map <- rnaturalearth::ne_countries(scale = 'small', returnclass = c("sf")) %>%
+  # st_transform(crs = "+proj=eck4") %>%
+  st_transform(crs = 4326) %>% # 4326
+  left_join(World_map_dat,
+            by = "iso_a3")
+  
+
+# Load eez_centroid data
+Eez_centroid <- my_path("D", "Spatial","eez_centroids.csv",read = T)
+
+# Tranform to tubular
+Eez_centroid_sf <-st_as_sf(Eez_centroid,
+            coords = c("longitude", "latitude")
+            ) %>% 
+  st_set_crs(4326) #%>% # to match shapefiles
+  # st_transform(crs = "+proj=eck4")
+
+# Transform sf to df
+Eez_centroid_eck <- as.data.frame(Eez_centroid_sf)
+
+Eez_centroid_eck <- do.call(rbind, st_geometry(Eez_centroid_sf)) %>% 
+  as_tibble() %>% 
+  setNames(c("lon","lat")) %>% 
+  bind_cols(Eez_centroid) %>% 
+  select(eez_name,longitude = lon,latitude = lat)
 
 ```
 
@@ -1360,16 +1382,16 @@ World_sf %>%
 # http://jsmayorga.com/post/mapping-the-global-network-of-transnational-fisheries/
 
 # Prepare data from results
-Data <- results %>% 
+Data <- Prop_results %>% 
   # get coords for sources
-  left_join(eez_centroid,
+  left_join(Eez_centroid_eck,
             by = "eez_name") %>%
   rename(source = eez_name,
          start_lon = longitude,
          start_lat = latitude,
          eez_name=eez_neighbour) %>% 
   # get coords for targets
-  left_join(eez_centroid,
+  left_join(Eez_centroid_eck,
             by = "eez_name") %>% 
   rename(target = eez_name,
          end_lon = longitude,
@@ -1392,15 +1414,20 @@ network_data_sf <- Data %>%
   purrr::transpose() %>% 
   purrr::map(~ matrix(flatten_dbl(.), nrow = 2, byrow = TRUE)) %>% 
   purrr::map(st_linestring) %>%
-  st_sfc(crs = 4326) %>%
+  # st_sfc(crs = 4326) %>%
+  st_sfc(crs = "+proj=eck4") %>% # for tbular plot
   st_sf(geometry = .)%>%
   bind_cols(Data) %>%
   select(everything(), geometry) %>% 
   # Set circles ('cus the world is not flat!)
   st_segmentize(units::set_units(100, km)) %>% 
-  mutate(geometry = (geometry + c(180,90)) %% c(360) - c(180,90)) %>% 
-  st_wrap_dateline(options = c("WRAPDATELINE=YES",  "DATELINEOFFSET=180"), quiet = TRUE) %>% 
-  sf::st_sf(crs = 4326)
+  mutate(geometry = (geometry + c(180,90)) %% c(360) - c(180,90)) %>%
+  # mutate(geometry = (geometry + c(18000000,9000000)) %% c(360) - c(18000000,9000000)) %>%
+  st_wrap_dateline(options = c("WRAPDATELINE=YES",  "DATELINEOFFSET=180"), quiet = TRUE) %>%
+  st_wrap_dateline(options = c("WRAPDATELINE=YES"), quiet = TRUE) %>%
+  # sf::st_sf(crs = 4326)
+  sf::st_sf(crs = "+proj=eck4") # for tbular plot
+
 
 #  unpack the coordinates of each feature 
 coord_data <- as.data.frame( st_coordinates(st_cast(network_data_sf,"MULTILINESTRING")$geometry))
@@ -1429,9 +1456,14 @@ gc()# clean ram
 # time <- "per_mid_plot"
 time <- "per_early_plot"
 
-x <- ggplot() +
-  geom_sf(data = subset(World_map, sovereignt != "Antarctica"), size = 0.1, fill = "gray90", col = "gray90") +
-  geom_sf(data = World_eez_sf, size = 0.1, fill = "white", col = "gray70") +
+## ------------------- ##
+# Global Plot
+## ------------------- ##
+
+
+Prop_map <- ggplot() +
+  geom_sf(data = subset(World_map, sovereignt != "Antarctica"), size = 0.1, fill = "gray50", col = "gray50") +
+  geom_sf(data = World_eez_sf, size = 0.1, fill = "white", col = "gray30") +
   geom_point(data = subset(Data, time_step == time & per_chng < 0),
              aes(start_lon,
                  start_lat,
@@ -1455,13 +1487,246 @@ x <- ggplot() +
     limits = c(0,max(Data$per_chng)),
     breaks = seq(0,max(Data$per_chng),5),
     # option="magma",
-    direction = -1
+    # direction = -1
   ) +
   ggsave("./Figures/figure_connections_early_n50.png",
-         width = 10,
-         height = 6,
-         units = "in"
+  width = 10,
+  height = 6,
+  units = "in"
   )
+
+
+## ------------------- ##
+# Regional Plots
+## ------------------- ##
+
+Lat_am_land <- World_map %>% 
+  filter(region_wb %in% c("Latin America & Caribbean") |
+          sau_fishing_entity %in% c("USA","Mexico")
+         )
+
+Lat_am_eez <- World_eez_sf %>% 
+  rename(sf_eez_name = eez_name) %>% 
+  left_join(Matching_names) %>% 
+  filter(
+    # sau_fishing_entity %in% Lat_am_land$sau_fishing_entity,
+         !str_detect(sf_eez_name,"Pacific"),
+         !sf_eez_name %in% c("USA (East Coast)","Suriname","Guyana","French Guiana","Bermuda (UK)","Brazil","El Salvador")
+         )
+
+Lat_am_eez %>% filter(str_detect(sf_eez_name,"Tri")) 
+
+Lat_am_data <- Data %>% 
+  filter(source %in% Lat_am_eez$sf_eez_name)
+
+Lat_am_paths <- paths %>% 
+  filter(source %in% Lat_am_eez$sf_eez_name,
+         target %in% Lat_am_eez$sf_eez_name)
+
+
+Lat_am_map <- ggplot() +
+  geom_sf(data = Lat_am_eez, size = 0.1, fill = "white", col = "gray30") +
+  geom_sf(data = Lat_am_land, size = 0.1, fill = "gray50", col = "gray40") +
+  geom_point(data = subset(Lat_am_data, time_step == time & per_chng < 0 ),
+             aes(start_lon,
+                 start_lat,
+                 col = per_chng),
+             size = 1,
+             col = "gray30",
+             shape = 20,
+             stroke = 1.5) +
+  geom_path(data = subset(Lat_am_paths, time_step == time & per_chng > 0),
+            aes(X, Y,
+                group = interaction(line_id,subline_id),
+                col = per_chng
+            ),
+            size = 1,
+            arrow = arrow(length = unit(0.05, "npc"),
+                          ends = "first"),
+            show.legend = NA) +
+  coord_sf(xlim = c(-100, -55),ylim = c(9, 30)) + 
+  labs(x = "Lon", y = "Lat") +
+  scale_x_continuous(breaks = seq(-100,60,10)) +
+  scale_y_continuous(breaks = seq(10,30,5)) +
+  # my_ggtheme_m() +
+  theme(legend.position = "",
+        panel.background = element_rect(fill = "white")) +
+  scale_colour_viridis(
+    name="Average Gain of\nStock-Share Ratio (%)",
+    limits = c(0,max(Lat_am_data$per_chng)),
+    breaks = seq(0,max(Lat_am_data$per_chng),5),
+    # option="magma",
+    # direction = -1
+  );Lat_am_map
+
+
+## ------------------- ##
+# The Med
+## ------------------- ##
+
+# Land polygon
+Med_land <- World_map %>% 
+  filter(region_wb %in% c("Europe & Central Asia","Middle East & North Africa") |
+          sau_fishing_entity %in% c("Spain","France")
+         )
+
+# EEZ polygon
+Med_eez <- World_eez_sf %>% 
+  rename(sf_eez_name = eez_name) %>% 
+  left_join(Matching_names) %>% 
+  filter(sau_fishing_entity %in% Med_land$sau_fishing_entity,
+         sf_eez_name != "Spain (Northwest)")
+
+# Med data
+Med_data <- Data %>% 
+  filter(source %in% Med_eez$sf_eez_name)
+
+# Med paths
+Med_paths <- paths %>% 
+  filter(source %in% Med_eez$sf_eez_name,
+         target %in% Med_eez$sf_eez_name)
+
+# Med plot
+Med_map <- ggplot() +
+  geom_sf(data = Med_eez, size = 0.5, fill = "white", col = "gray30") +
+  geom_sf(data = Med_land, size = 0.5, fill = "gray50", col = "gray40") +
+  geom_point(data = subset(Med_data, time_step == time & per_chng < 0 ),
+             aes(start_lon,
+                 start_lat,
+                 col = per_chng),
+             size = 1,
+             col = "gray30",
+             shape = 20,
+             stroke = 1.5) +
+  geom_path(data = subset(Med_paths, time_step == time & per_chng > 0),
+            aes(X, Y,
+                group = interaction(line_id,subline_id),
+                col = per_chng
+            ),
+            size = 1,
+            arrow = arrow(length = unit(0.05, "npc"),
+                          ends = "first"),
+            show.legend = NA) +
+  coord_sf(xlim = c(-3, 35),ylim = c(30, 45)) +
+  labs(x = "Lon", y = "Lat") +
+  scale_x_continuous(breaks = seq(-5,35,10)) +
+  scale_y_continuous(breaks = seq(30,50,5)) +
+  # my_ggtheme_m() +
+  theme(legend.position = "",
+        panel.background = element_rect(fill = "white")) +
+  scale_colour_viridis(
+    name="Average Gain of\nStock-Share Ratio (%)",
+    limits = c(0,max(Med_data$per_chng)),
+    breaks = seq(0,max(Med_data$per_chng),5),
+    # option="magma",
+    # direction = -1
+  );Med_map
+
+## ------------------- ##
+# Northern Europe
+## ------------------- ##
+
+Eu_land <- World_map %>% 
+  filter(
+    continent == "Europe",
+    sau_fishing_entity != "Iceland"
+    )
+
+# 
+# ggplot(N_Eu_land) +
+#   geom_sf() 
+  
+
+Eu_eez <- World_eez_sf %>% 
+  rename(sf_eez_name = eez_name) %>% 
+  left_join(Matching_names) %>% 
+  filter(
+    !sf_eez_name %in% c("Iceland", "Norway","Italy","Greece","Croatia","Bulgaria","Romania"),
+    !str_detect(sf_eez_name,"Spain")
+  )
+
+Eu_eez %>% filter(str_detect(sf_eez_name,"Romania"))
+
+Eu_data <- Data %>% 
+  filter(source %in% Eu_eez$sf_eez_name)
+
+Eu_paths <- paths %>% 
+  filter(source %in% Eu_eez$sf_eez_name,
+         target %in% Eu_eez$sf_eez_name)
+
+
+Eu_map <- ggplot() +
+  geom_sf(data = Eu_eez, size = 0.5, fill = "white", col = "gray30") +
+  geom_sf(data = Eu_land, size = 0.5, fill = "gray50", col = "gray40") +
+  geom_point(data = subset(Med_data, time_step == time & per_chng < 0 ),
+             aes(start_lon,
+                 start_lat,
+                 col = per_chng),
+             size = 1,
+             col = "gray30",
+             shape = 20,
+             stroke = 1.5) +
+  geom_path(data = subset(Eu_paths, time_step == time & per_chng > 0),
+            aes(X, Y,
+                group = interaction(line_id,subline_id),
+                col = per_chng
+            ),
+            size = 1,
+            arrow = arrow(length = unit(0.05, "npc"),
+                          ends = "first"),
+            show.legend = NA) +
+  coord_sf(xlim = c(-15, 30), ylim = c(45, 65)) +
+  labs(x = "Lon", y = "Lat") +
+  scale_y_continuous(breaks = seq(45,65,10)) +
+  # scale_x_continuous(breaks = seq(45,65,10)) +
+  # my_ggtheme_m() +
+  theme(legend.position = "",
+        panel.background = element_rect(fill = "white", color = "white"),
+        panel.grid.major =  element_line(color = "white")
+        ) +
+  scale_colour_viridis(
+    name="Average Gain of\nStock-Share Ratio (%)",
+    limits = c(0,max(Eu_data$per_chng)),
+    breaks = seq(0,max(Eu_data$per_chng),5),
+    # option="magma",
+    # direction = -1
+  );Eu_map
+
+
+## ------------------- ##
+# Final Figure
+## ------------------- ##
+
+gc()
+plot_all <- ggdraw() +
+      # map
+      draw_plot(Prop_map, x = 0, y = 0.45, width = 1, height = 0.58) +
+      # Lat America reg plor
+      draw_plot(Lat_am_map, x = 0.1, y = 0.08, width = 0.3, height = 0.4) +
+      # Europe reg plot
+      draw_plot(Eu_map, x = 0.35, y = 0.08, width = 0.3, height = 0.4) +
+      # Med regional plot
+      draw_plot(Med_map, x = 0.65, y = 0.08, width = 0.3, height = 0.4) +
+      draw_plot_label(label = c("a", "b"), 
+                      size = 20,
+                      x = c(0, 0), 
+                      y = c(1, 0.45)
+      ) #+
+      # draw_plot_label(label = c("Revenue (USD) | Catch (Tonnes)","(Million)"), 
+                      # size = 8,
+                      # x = c(0.325,0.485), 
+                      # y = c(0.31,0.29)
+      )
+    
+    
+    save_plot(
+      # paste(Figures_Path,"100_25_Bins_Value_Region.png",sep=""),
+      "test.png",
+      plot_all,
+      base_height = 8,
+      base_width = 8
+    )
+  
 
 ```
 
